<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:ignore="MissingDefaultResource">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="99dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/investments"
            android:color="#ABDAFC" android:layout_marginTop="0dp" android:layout_marginStart="0dp"/>

        <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="-60dp"
                android:layout_below="@+id/header_cover_image"
                android:background="@drawable/profile_image_border"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_profile_image"
                android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="123dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="99dp"
            android:background="#eb96dede"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/name"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

        </RelativeLayout>

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:elevation="4dp"
                    android:orientation="vertical" android:padding="4dp">

                <TextView
                        android:layout_width="149dp"
                        android:layout_height="21dp"
                        android:background="#0cffffff"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/personal_data" android:id="@+id/textView2"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="8dp"/>

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="34dp"
                        android:background="#0cffffff"
                        android:text="@string/name"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:id="@+id/textView3"/>
                <EditText
                        android:id="@+id/edit_name"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="12dp"
                        android:enabled="false"
                        android:layout_height="34dp"
                        android:layout_width="224dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                        tools:text="@tools:sample/cities"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="4dp"/>
                <TextView
                        android:text="@string/email"
                        android:layout_width="80dp"
                        android:layout_height="34dp"
                        android:id="@+id/textView4" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <EditText
                        android:id="@+id/edit_email"
                        android:text=""
                        android:textColor="@android:color/black"
                        android:textSize="12dp"
                        android:enabled="false"
                        android:layout_width="224dp"
                        android:layout_height="34dp"
                        app:layout_constraintStart_toEndOf="@+id/textView4"
                        android:layout_marginStart="4dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/edit_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp"/>
                <TextView
                        android:text="@string/telephone"
                        android:layout_width="80dp"
                        android:layout_height="34dp"
                        android:id="@+id/textView6" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
                <EditText
                        android:text=""
                        android:id="@+id/edit_telephone"
                        android:textSize="12dp"
                        android:enabled="false"
                        android:textColor="@android:color/black"
                        android:layout_width="224dp"
                        android:layout_height="34dp"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        android:layout_marginStart="4dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/edit_email"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp"/>

                <TextView
                        android:text="@string/country"
                        android:layout_width="80dp"
                        android:layout_height="34dp"
                        android:id="@+id/textView7"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                />
                <EditText
                        android:text=""
                        android:id="@+id/edit_country"
                        android:textColor="@android:color/black"
                        android:textSize="12dp"
                        android:enabled="false"
                        android:layout_width="224dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/edit_telephone"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="20dp" app:layout_constraintStart_toEndOf="@+id/textView7"
                        android:layout_marginStart="4dp"/>
                <Button
                        android:text="@string/save"
                        android:textSize="10dp"
                        android:layout_width="64dp"
                        android:layout_height="31dp"
                        android:id="@+id/edit_save_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.918" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/edit_country" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
                <ImageButton
                        android:layout_width="42dp"
                        android:layout_height="39dp" android:src="@drawable/pencil"
                        android:id="@+id/editButton"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="@null" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView2"
                        android:layout_marginStart="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"/>


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#fff"
                android:elevation="4dp"
                android:padding="20dp"
                android:orientation="vertical">

                <TextView
                        android:layout_width="349dp"
                        android:layout_height="17dp"
                        android:background="#0cffffff"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/interests" android:id="@+id/textView8"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="3dp"/>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="349dp"
                        android:layout_height="17dp"
                        android:background="#0cffffff"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:text="@string/accounts" android:id="@+id/textView9"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="15dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="3dp"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
